update test runner

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,11 +10,14 @@ jobs:
     - name: Check Code
       run: |
         black --check --line-length 99 --skip-string-normalization setup.py waterfall
-        pylint --disable=C0114,C0116 --fail-under 10 setup.py waterfall
+        pylint --disable=C0114,C0115,C0116 --fail-under 10 --max-line-length 99 setup.py waterfall
   ubuntu18:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
     - name: Install
       run: python3 -m pip install .
     - name: Test Import
