--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install Linter
-      run: python3 -m pip install pylint black
+      run: python3 -m pip install pylint black .[server]
     - name: Check Code
       run: |
         black --check --line-length 99 --skip-string-normalization setup.py waterfall
