--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,10 +16,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Install
-      run: python -m pip install .[webserver]
     - name: Test
-      run: bash test_code.cmd
+      run: bash test_code.sh
   ubuntu20:
     runs-on: ubuntu-20.04
     steps:
@@ -27,10 +25,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: 3.9
-    - name: Install
-      run: python -m pip install .[webserver]
     - name: Test
-      run: bash test_code.cmd
+      run: bash test_code.sh
   ubuntu22:
     runs-on: ubuntu-22.04
     steps:
@@ -38,17 +34,13 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.10'
-    - name: Install
-      run: python -m pip install .[webserver]
     - name: Test
-      run: bash test_code.cmd
+      run: bash test_code.sh
   windows2019:
     runs-on: windows-2019
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
-    - name: Install
-      run: python -m pip install .[webserver]
     - name: Test
       run: test_code.cmd
   windows2022:
@@ -56,18 +48,14 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
-    - name: Install
-      run: python -m pip install .[webserver]
     - name: Test
       run: test_code.cmd
-  macos:
+  macos11:
     runs-on: macos-11
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: 3.11
-    - name: Install
-      run: python -m pip install .[webserver]
     - name: Test
-      run: bash test_code.cmd
+      run: bash test_code.sh
