--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,9 @@ jobs:
     - name: Install Linter
       run: python3 -m pip install pylint black .[webserver]
     - name: Check Code
-      run: bash check_code.cmd
+      run: |
+        black --check --line-length 99 --skip-string-normalization setup.py waterfall
+        pylint --min-public-methods=1 --disable=C0114,C0115,C0116 --fail-under 10 --max-line-length 99 setup.py waterfall
   ubuntu18:
     runs-on: ubuntu-18.04
     steps:
