--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,14 +42,12 @@ jobs:
     runs-on: windows-2019
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
     - name: Test
       run: cmd test_code.cmd
   windows2022:
     runs-on: windows-2022
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
     - name: Test
       run: cmd test_code.cmd
   macos11:
@@ -59,5 +57,9 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: 3.11
+    - name: install timeout
+      run: |
+        brew install coreutils
+        alias timeout=gtimeout
     - name: Test
       run: bash test_code.sh
