--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
       with:
         python-version: 3.8
     - name: Test
-      run: bash test_code.sh
+      run: bash .github/workflows/test_code.sh
   ubuntu20:
     runs-on: ubuntu-20.04
     steps:
@@ -28,7 +28,7 @@ jobs:
       with:
         python-version: 3.9
     - name: Test
-      run: bash test_code.sh
+      run: bash .github/workflows/test_code.sh
   ubuntu22:
     runs-on: ubuntu-22.04
     steps:
@@ -37,21 +37,21 @@ jobs:
       with:
         python-version: '3.10'
     - name: Test
-      run: bash test_code.sh
+      run: bash .github/workflows/test_code.sh
   windows2019:
     runs-on: windows-2019
     steps:
     - uses: actions/checkout@v2
     - name: Test
       shell: cmd
-      run: test_code.cmd
+      run: .github\workflows\test_code.cmd
   windows2022:
     runs-on: windows-2022
     steps:
     - uses: actions/checkout@v2
     - name: Test
       shell: cmd
-      run: test_code.cmd
+      run: .github\workflows\test_code.cmd
   macos11:
     runs-on: macos-11
     steps:
@@ -64,4 +64,4 @@ jobs:
         brew install coreutils
         alias timeout=gtimeout
     - name: Test
-      run: bash test_code.sh
+      run: bash .github/workflows/test_code.sh
