--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ jobs:
     - name: Install Linter
       run: python3 -m pip install pylint black .[webserver]
     - name: black
-      run: black --check --line-length 99 --skip-string-normalization setup.py waterfall
+      run: black --check --line-length 99 --target-version=py310 --skip-string-normalization setup.py waterfall
     - name: pylint
       run: pylint --disable=C0114,C0115,C0116 --fail-under 10 --max-line-length 99 setup.py waterfall
   ubuntu20:
